# pompeius

./: .cproject  .gitignore  .project
Debug/: Eternity  makefile
Debug/src/: Eternity.d  Puzzle.d  subdir.mk
data/: 2x2.txt  4x4.txt  4x4_solution.txt  5x5.txt  5x5_solution.txt  8x8.txt  8x8_solution.txt
src/: CMakeLists.txt  Eternity.cpp  Puzzle.cpp  Puzzle.h
src/Test/: Test.cpp
src/core/: Puzzle.cpp  Puzzle.h
